fixing font sizing and spacing on cadrenal-page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -410,7 +410,7 @@
 
 @font-face {
   font-family: 'syne-Bold';
-  src: url('/fonts/syne-bold.otf') format('opentype');
+  src: url('/fonts/Syne-Bold.ttf') format('truetype');
   font-weight: 700;
 }
 
